--- a/Funcss/styles/fun.css
+++ b/Funcss/styles/fun.css
@@ -12,15 +12,19 @@ a{text-decoration: none;background: transparent;transition: 0.3s;color:inherit}a
 h1{font-size:xx-large;font-weight: 200;}h2{font-size:x-large}h3{font-size:larger}h4{font-size:large}h5{font-size:medium}h6{font-size:small}
 button{-webkit-appearance:button}link{text-decoration: none;}link:hover{text-decoration: none;}input{background:transparent}
 /* colors */
-.success,.hover-success:hover{background-color: rgba(7, 149, 66, 0.8)}
-.info,.hover-info:hover{  background-color: rgb(229, 246, 253);}
-.warning,.hover-warning:hover{background-color: rgba(220, 128, 1, 0.8);}
-.danger,.error,.hover-danger:hover{background-color: rgba(220, 17, 1, 0.8);}
+.success,.hover-success:hover{background-color: rgba(7, 149, 66, 0.8) !important}
+.info,.hover-info:hover{  background-color: rgb(95, 187, 226) !important;}
+.warning,.hover-warning:hover{background-color: rgba(220, 128, 1, 0.8) !important;}
+.danger,.error,.hover-danger:hover{background-color: rgba(220, 17, 1, 0.8) !important;}
 /* .input:focus{border: 1.5px solid rgba(7, 149, 66, 0.8);} */
-.success-outline{border:1px solid rgba(7, 149, 66, 0.8)}
-.info-outline{border:1px solid rgb(229, 246, 253);}
-.warning-outline{border:1px solid rgba(220, 128, 1, 0.8);}
-.danger-outline {border:1px solid rgba(220, 17, 1, 0.8);}
+.success-outline{border:1px solid rgba(7, 149, 66, 0.8) !important}
+.info-outline{border:1px solid rgb(229, 246, 253) !important;}
+.warning-outline{border:1px solid rgba(220, 128, 1, 0.8) !important;}
+.danger-outline {border:1px solid rgba(220, 17, 1, 0.8) !important;}
+.text-success{color: #48c78e !important;}
+.text-info{color: rgb(95, 187, 226);;}
+.text-warning{color: rgba(220, 128, 1, 0.8);}
+.text-danger{color: rgba(220, 17, 1, 0.8);}
 .text-blue,.hover-text-blue:hover{color:#2196F3!important}.text-light-blue,.hover-text-light-blue:hover{color:#87CEEB!important}
 .text-brown,.hover-text-brown:hover{color:#795548!important}.text-cyan,.hover-text-cyan:hover{color:#00bcd4!important}
 .text-blue-grey,.hover-text-blue-grey:hover,.text-blue-gray,.hover-text-blue-gray:hover{color:#607d8b!important}
@@ -193,11 +197,13 @@ button{-webkit-appearance:button}link{text-decoration: none;}link:hover{text-dec
 .card.horizontal{display: flex;flex-direction: row;}.card.horizontal div:first-of-type img{width: 100%;height: auto;}
 .card.reveal{position: relative;}.reveal-front{position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: 1;opacity: 0;transition: 1s ease;}.card.reveal:hover .reveal-front{opacity: 1;}
 .pointer{cursor: pointer;}.zoom-in{cursor: zoom-in;}.zoom-out{cursor: zoom-out;}
-.navigation-bar{width: 100%;display: flex;flex-direction: row;display: -ms-flexbox;position: relative;justify-content: space-between;}
-.navigation-bar a,.nav-logo{display: inline-block;padding: 10px;}.navigation-bar .drop-button{margin: 0;padding: 5px;}
+.navigation-bar{width: 100%;display: flex;flex-direction: row;display: -ms-flexbox;position: relative;justify-content: space-between;clear:both;}
+.navigation-bar a,.nav-logo{display: inline-block;padding: 0px 10px;}.navigation-bar .drop-button{margin: 0;padding: 5px;}
 .sidebar-trigger{display: none;position: absolute;top: 10px;right: 10px;cursor: pointer;}
 .link-wrapper{display: flex;flex-direction: row;}.collapse{overflow: auto;transition: 0.5s;display: block;width: 100%;max-height: fit-content;}
 @media (max-width:900px){.sidebar-trigger{display: block;}.link-wrapper{display: none;}}
+
+
 /* Alerts */
 .alert{position: relative;display: flex;flex-direction: row;padding: 5px;border-radius: 5px;}
 .alert-icon > i{cursor: pointer;margin: 0;font-size:medium !important;}
