--- a/Funcss/styles/fun.css
+++ b/Funcss/styles/fun.css
@@ -353,13 +353,7 @@ button{-webkit-appearance:button}link{text-decoration: none;}link:hover{text-dec
 .hover-right{transition: transform 0.3s ease-in-out;}.hover-right:hover{transform: translateX(5%);}
 .animate-up-down{animation: updown 5s linear infinite;}
 @keyframes updown{50%{transform: translateY(-10%);}100%{transform: translateY(0%);}}
-/*progress bar animation*/
-.inset-shadow{box-shadow: 0px 2px 4px 0px inset rgba(0,0,0,0.2),0px 4px 8px 0px inset rgba(0,0,0,0.4);}
-.progress.animate-width{margin: 0;top: 0;left: 0;position: relative;overflow:hidden;background-size: 100%;animation: loader 10s infinite linear;}
-@keyframes loader{0%{width: 0%;}20%{width: 20%;}30%{width: 30%;}40%{width: 40%;}50%{width: 50%;}60%{width: 60%;}70%{width: 70%;}80%{width: 80%;}90%{width: 90%;}100%{width: 100%;}}
-.animate-progress-color{margin: 0;top: 0;left: 0;position: relative;overflow:hidden;background-size: 100%;animation: loader-color 20s infinite linear;}
-@keyframes loader-color{0%{width: 0%;}20%{width: 20%;background-color: red;}30%{width: 30%;}40%{width: 40%;background-color: green;}50%{width: 50%;}60%{width: 60%;}70%{width: 70%;}80%{width: 80%;background-color: blue;}90%{width: 90%;}100%{width: 100%;background-color: #2196F3;}}
-.rotate{animation: rotate 1s linear infinite;}@keyframes rotate{100%{transform: rotate(360deg);}}
+
 /*icons*/
 .icon.size-1{font-size: 1em;}.icon.size-2{font-size: 2em;}.icon.size-3{font-size: 3em;}.icon.size-4{font-size: 4em;}
 .icon.size-5{font-size: 5em;}.icon.size-6{font-size: 6em;}.icon.size-7{font-size: 7em;}.icon.size-8{font-size: 8em;}
@@ -583,4 +577,220 @@ backdrop-filter: blur(10px);
 @keyframes SlideRight {
   from{margin-right:-100%}
   to{margin-right: 0%;}
+}
+/*progress bar animation*/
+.progressBar{display: relative;padding:5px;border-radius:200px}
+.rotate{animation: rotate 1s linear infinite;}@keyframes rotate{100%{transform: rotate(360deg);}}
+
+/* loaders */
+.loadSpan {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loadSpan div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  animation: loadSpan 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.loadSpan div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.loadSpan div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.loadSpan div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes loadSpan {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
+}
+
+.ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #fff;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: ellipsis1 0.6s infinite;
+}
+.ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: ellipsis2 0.6s infinite;
+}
+.ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: ellipsis2 0.6s infinite;
+}
+.ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: ellipsis3 0.6s infinite;
+}
+@keyframes ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
+
+.roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.roller div {
+  animation: roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #ddd;
+  margin: -4px 0 0 -4px;
+}
+.roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loadRing {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  background-color:transparent!important;
+}
+.loadRing div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  animation: loadRing 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+.loadRing div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.loadRing div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.loadRing div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes loadRing {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
