--- a/Funcss/styles/index.css
+++ b/Funcss/styles/index.css
@@ -114,7 +114,7 @@ font-weight:600;
 .sub-content a{width: 100%;}
 @media(max-width: 900px) {
   .main-content{width: 100%;position: relative;}
-  .sub-content{position: relative;width: 100%;display: block;top: 0;right: 0;}
+  .sub-content{position: relative;width: 100%;display: none;top: 0;right: 0;}
 }
 .right-link{border-left: 5px solid white;}
 .right-link:hover{border-left: 5px solid #3f51b5;}
